--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .container {
 	width: 520px;
-	min-height: 200px;
+	/*min-height: 200px;*/
 	padding: 20px 20px 20px;
 	margin-bottom: 10px;
 	overflow: hidden;
@@ -14,10 +14,16 @@ body {
 	-webkit-box-sizing: border-box;
 }
 
+p {
+	text-align: center;
+}
+
 h1 {
 	font-size: 1.5em;
+	line-height: 1em;
 	color: #444;
 	text-shadow: 0 1px 0 #FFF;
+	margin-bottom: 0;
 }
 
 dt, dd {
@@ -29,6 +35,8 @@ dt {
 	width: 18%;
 	clear: both;
 }
+
+
 
 ul {
 	float: left;
@@ -48,6 +56,26 @@ li {
 	box-shadow: 
 		inset 0 1px 1px #444,
 		0 1px 0 #FFF;
+}
+
+h2 {
+	float: left;
+	font-size: .7em;
+	line-height: .3em;
+	font-weight: normal;
+	margin-right: .5em;
+}
+
+#references {
+	clear: both;
+}
+
+#references li {
+	width: auto;
+	float: left;
+	font-size: .75em;
+	margin-right: .5em;
+	padding: .3em .5em;
 }
 
 .browser {
@@ -79,8 +107,8 @@ li {
 .u {background: gray;}
 
 input, select {
-  width: 450px;
-  padding: 6px 8px;
+  width: 100%;
+  padding: .7em .5em .5em;
   border: 1px solid #444;
   border-bottom: 1px solid #0e1d45;
   border-radius: 5px;
@@ -89,4 +117,12 @@ input, select {
   font: bold 16px/1 "helvetica neue", helvetica, arial, sans-serif;
   text-decoration: none;
   -webkit-box-sizing: border-box;
+}
+
+#moreInfo {
+	font-size: .8em;
+	line-height: 2em;
+	text-align: right;
+	margin-bottom: 1em;
+	display: block;
 }
