--- a/style.css
+++ b/style.css
@@ -1,128 +1,142 @@
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
+
 body {
 	font-family: sans-serif;
+	font-size: 16px;
 }
 
 .container {
 	width: 520px;
-	/*min-height: 200px;*/
-	padding: 20px 20px 20px;
 	margin-bottom: 10px;
 	overflow: hidden;
-	background:-webkit-linear-gradient(#F7F7F7, #CCC);
-	box-shadow: 0 2px 2px #000;
-	border-radius: 10px;
 	-webkit-box-sizing: border-box;
 }
 
-p {
-	text-align: center;
+	input, select {
+		width: 100%;
+		padding: .7em .5em .5em;
+		border: 1px solid #CCC;
+		font: 16px/1 "helvetica neue", helvetica, arial, sans-serif;
+		text-decoration: none;
+		-webkit-box-sizing: border-box;
+		outline: 0;
+	}
+
+	p {
+		font-size: 0.85em;
+	}
+
+
+.browser-support {
+	padding: 0em 0.5em;
 }
 
-h1 {
-	font-size: 1.5em;
-	line-height: 1em;
-	color: #444;
-	text-shadow: 0 1px 0 #FFF;
-	margin-bottom: 0;
-}
+	.browser-list {
+		float: left;
+		margin: 0 0.5em 0 0;
+		padding: 0;
+		list-style: none;
+		overflow: hidden;
+		text-align: center;
+	}
 
-dt, dd {
-	width: 100px;
+		.browser-list li {
+			width: 2em;
+			padding: 0.5em 0;
+			margin-bottom: 1px;
+			color:#FFF;
+		}
+		
+		.y, .x {background: green; }
+		.n, .p {background: red;}
+		.a {background: #25BE25;}
+		.u {background: gray;}
+
+		.browser-list .browser {
+			width: 32px;
+			height: 32px;
+			padding: 0;
+			margin-bottom: .5em;
+			background-repeat: no-repeat;	
+			box-shadow: none;
+			text-indent: -9999px;
+		}
+
+			.ie 		{background: url(img/32-ie.png);}
+			.firefox 	{background: url(img/32-firefox.png);}
+			.chrome 	{background: url(img/32-chrome.png);}
+			.safari,
+			.ios_saf 	{background: url(img/32-safari.png);}
+			.opera,
+			.op_mini,
+			.op_mob 	{background: url(img/32-opera.png);}
+			.android 	{background: url(img/32-android.png);}
+
+			.and_chr,
+			.and_ff,
+			.bb			{display: none;}
+
+			.ios_saf:after,
+			.op_mini:after,
+			.op_mob:after {
+				display: block;
+				font-size: 0.75em;
+				color: #FFF;
+				background: rgba(0, 0, 0, 0.25);
+				text-indent: initial;
+			}
+
+			.ios_saf:after	{content: "iOS";}
+			.op_mini:after	{content: "Mini";}
+			.op_mob:after	{content: "Mobile";}
+
+.references {
 	float: left;
-}
-
-dt {
-	width: 18%;
-	clear: both;
-}
-
-
-
-ul {
-	float: left;
-	margin: 0 1em 0 0;
+	margin: 1em 0.5em 0 0;
 	padding: 0;
 	list-style: none;
 	overflow: hidden;
-	text-align: center;
+	text-align: center;	
 }
 
-li {
-	width: 2em;
-	margin-bottom: 5px;
-	border-radius: 3px;
-	color:#FFF;
-	text-shadow: 0 1px 1px #000;
-	box-shadow: 
-		inset 0 1px 1px #444,
-		0 1px 0 #FFF;
-}
+	.references li {
+		width: auto;
+		float: left;
+		margin-right: .5em;
+		padding: .3em .5em;
+		font-size: .75em;
+		color:#FFF;		
+	}
 
-h2 {
-	float: left;
-	font-size: .7em;
-	line-height: .3em;
-	font-weight: normal;
-	margin-right: .5em;
-}
-
-#references {
-	clear: both;
-}
-
-#references li {
-	width: auto;
-	float: left;
-	font-size: .75em;
-	margin-right: .5em;
-	padding: .3em .5em;
-}
-
-.browser {
-	width: 32px;
-	height: 32px;
-	margin-bottom: .5em;
-	background-repeat: no-repeat;	
-	box-shadow: none;
-	text-indent: -9999px;
-}
-
-.ie 		{background: url(img/32-ie.png);}
-.firefox 	{background: url(img/32-firefox.png);}
-.chrome 	{background: url(img/32-chrome.png);}
-.safari 	{background: url(img/32-safari.png);}
-.opera	 	{background: url(img/32-opera.png);}
-.ios_saf	{background: url(img/32-ios_saf.png);}
-.op_mini 	{background: url(img/32-op_mini.png);}
-.android 	{background: url(img/32-android.png);}
-.bb 		{background: url(img/32-bb.png);}
-.op_mob		{background: url(img/32-op_mob.png);}
-
-.and_chr,
-.and_ff		{display: none;}
-
-.y, .x {background: green; }
-.n, .p {background: red;}
-.a {background: #25BE25;}
-.u {background: gray;}
-
-input, select {
-  width: 100%;
-  padding: .7em .5em .5em;
-  border: 1px solid #444;
-  border-bottom: 1px solid #0e1d45;
-  border-radius: 5px;
-  -webkit-box-shadow: inset 0 1px 0 0 #b1b9cb;
-  box-shadow: inset 0 1px 0 0 #b1b9cb;
-  font: bold 16px/1 "helvetica neue", helvetica, arial, sans-serif;
-  text-decoration: none;
-  -webkit-box-sizing: border-box;
-}
-
-#moreInfo {
+.more-info {
+	display: block;
+	margin-bottom: 1em;
 	font-size: .8em;
 	line-height: 2em;
 	text-align: right;
-	margin-bottom: 1em;
-	display: block;
 }
