--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 
 .container {
   width: 520px;
+  margin-right: 10px;
   margin-bottom: 10px;
   overflow: hidden;
   -webkit-box-sizing: border-box;
@@ -48,7 +49,7 @@ body {
 
 input {
   width: 100%;
-  padding: .7em .5em .5em;
+  padding: 0.7em 0.5em 0.5em;
   border: 1px solid #CCC;
   font-size: 16px;
   outline: 0;
@@ -169,6 +170,9 @@ input {
 }
 
 .about-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
   max-width: 16px;
   cursor: pointer;
   opacity: 0.75;
@@ -179,16 +183,4 @@ input {
   margin-top: 0.25em;
   padding: 0.25em 1em;
   background: #EEE;
-}
-
-.about:before {
-  content: "";
-  position: absolute;
-  top: -5px;
-  left: 3px;
-  display: block;
-  width: 0;
-  border-bottom: 5px solid #EEE;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
 }
